<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Fragment2">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Fragment 2"
        android:textSize="12sp" />

    <!-- TODO: Update blank fragment layout -->


     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="146dp"
         android:layout_height="139dp"
         android:contentDescription="lagcc_logo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.076"
         app:srcCompat="@drawable/logo" />

     <TextView
         android:id="@+id/textView"
         android:layout_width="195dp"
         android:layout_height="137dp"
         android:fontFamily="serif"
         android:text="LaGuardia Jobs and \nInternships"
         android:textAlignment="center"
         android:textColor="#0C0C0C"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.861"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.075"
         tools:layout_editor_absoluteX="193dp"
         tools:layout_editor_absoluteY="33dp" />

     <TextView
         android:id="@+id/applyJob"
         android:layout_width="232dp"
         android:layout_height="42dp"
         android:fontFamily="serif"
         android:text="@string/linkApply"
         android:textAlignment="viewStart"
         android:textColor="#0E2CCF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.089"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textView3"
         app:layout_constraintVertical_bias="0.113" />

     <TextView
         android:id="@+id/applyTras"
         android:layout_width="387dp"
         android:layout_height="55dp"

         android:fontFamily="serif"
         android:text="Learn more about our Internships"
         android:textColor="#0B0B0B"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.443" />

     <TextView
         android:id="@+id/applyIntern"
         android:layout_width="303dp"
         android:layout_height="41dp"

         android:layout_marginStart="16dp"
         android:fontFamily="serif"
         android:text="@string/linkIntern"
         android:textColor="#0E2CCF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.514" />

     <TextView
         android:id="@+id/textView3"
         android:layout_width="387dp"
         android:layout_height="55dp"

         android:fontFamily="serif"
         android:text="@string/learn_more_about_our_jobs"
         android:textColor="#0B0B0B"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.3" />

     <TextView
         android:id="@+id/textView4"
         android:layout_width="388dp"
         android:layout_height="37dp"
         android:layout_marginStart="16dp"
         android:fontFamily="serif"
         android:text="LaGuardia  Community"
         android:textColor="#0B0B0B"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.57" />

     <TextView
         android:id="@+id/applyCom"
         android:layout_width="303dp"
         android:layout_height="41dp"

         android:layout_marginStart="16dp"
         android:fontFamily="serif"
         android:text="@string/linkCom"
         android:textColor="#0E2CCF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.627" />

     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="322dp"
         android:layout_height="188dp"

         android:layout_marginBottom="44dp"
         android:contentDescription="lagcc_building"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/lagcc" />

</androidx.constraintlayout.widget.ConstraintLayout>

